[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/UI/icons/Game icons (base)/PNG/White/1x/cross.png" type="Texture" id=1]
[ext_resource path="res://resources/KFN_40_1.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/UI/pause_menu/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/icons/Game icons (base)/PNG/White/1x/audioOn.png" type="Texture" id=4]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
margin_left = 460.0
margin_top = 240.0
margin_right = 1460.0
margin_bottom = 840.0
rect_min_size = Vector2( 1000, 600 )
color = Color( 0.0745098, 0.0627451, 0.184314, 0.941176 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 350.0
margin_top = 150.0
margin_right = -350.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeHSlider" type="HSlider" parent="CenterContainer/ColorRect/VBoxContainer"]
margin_top = 116.0
margin_right = 300.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 10 )

[node name="MuteCheckBox" type="CheckBox" parent="CenterContainer/ColorRect/VBoxContainer/VolumeHSlider"]
anchor_left = -0.012
anchor_top = 2.758
anchor_right = -0.012
anchor_bottom = 2.758
margin_left = 0.100061
margin_top = -11.9974
margin_right = 66.1001
margin_bottom = 12.0026
text = " Mute"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioTextureRect" type="TextureRect" parent="CenterContainer/ColorRect/VBoxContainer/VolumeHSlider"]
anchor_left = -0.027
anchor_top = 0.338
anchor_right = -0.027
anchor_bottom = 0.338
margin_left = -49.9
margin_top = -24.9954
margin_right = 0.1
margin_bottom = 25.0046
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="CenterContainer/ColorRect/VBoxContainer"]
margin_top = 182.0
margin_right = 300.0
margin_bottom = 232.0
rect_min_size = Vector2( 0, 50 )

[node name="QuitButton" type="Button" parent="CenterContainer/ColorRect/VBoxContainer"]
margin_top = 282.0
margin_right = 300.0
margin_bottom = 333.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="CloseMenuButton" type="Button" parent="CenterContainer/ColorRect"]
modulate = Color( 0.85098, 0.305882, 0.305882, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -62.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 31, 28 )
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
